changed some cheese

--- a/static/index.html
+++ b/static/index.html
@@ -13,10 +13,10 @@
             <img src="cheese4.jpg" />
         </div>
         <div>
-            <img src="cheese5.jpg" />
+            <img src="cheese5.webp" />
         </div>
         <div>
-            <img src="cheese6.jpg" />
+            <img src="cheese6.webp" />
         </div>
         <div>
             <img src="horse.jpg" />
