--- a/static/index.html
+++ b/static/index.html
@@ -1,22 +1,22 @@
 <html>
     <body>
         <div>
-            <img src="cheese.jpg" />
+            <img src="cheese.jpg" width="400" />
         </div>
         <div>
-            <img src="cheese2.jpg" />
+            <img src="cheese2.jpg" width="400"/>
         </div>
         <div>
-            <img src="cheese3.jpg" />
+            <img src="cheese3.jpg" width="400"/>
         </div>
         <div>
-            <img src="cheese4.jpg" />
+            <img src="cheese4.jpg" width="400"/>
         </div>
         <div>
-            <img src="cheese5.webp" />
+            <img src="cheese5.webp" width="400"/>
         </div>
         <div>
-            <img src="cheese6.webp" />
+            <img src="cheese6.webp" width="400"/>
         </div>
         <div>
             <img src="horse.jpg" />
